--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,8 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -34,12 +31,13 @@ a:hover {
 body {
   margin: 0;
   display: flex;
+  flex-direction: column;
   /* place-items: center; */
-  justify-content: center;
   min-width: 320px;
   min-height: 100vh;
   box-sizing: border-box;
   background-color: #242424;
+  padding: 1%;
 }
 
 h1 {
@@ -96,3 +94,5 @@ button:focus-visible {
 a {
   margin-right: 5px;
 }
+
+
